package TheWorldsProblem;

public enum ProblemType {
    FINANCIAL,
    SPIRITUAL,
    EDUCATION,
    BUSINESS,
    TECHNICAL
}
